--- a/index.html
+++ b/index.html
@@ -14,16 +14,24 @@
     <img class="spinny spin-r" src="./OIP.jpg" alt="cool cat"/>
     <img class="spinny spin-l" src="./OIP.jpg" alt="cool cat"/>
     <h1>Xi Nan</h1>
-    <p class="p-16"> hello I am Xi Nan I go by Nanxi  </p>
-    <img class="queen" src="./997987.jpg" alt="anime" />
-    <img class="queen" src="./guit.jpg" alt="guitar"
+    <p class="p-16"> hello I am Xi Nan I go by Nanxi. I am an undergraduate student currently studying computer science with concentration on Intelligence 
+      and media at Georgia Tech. I am Looking for a summer internship as a software engineer. Dedicated to continuous improvement and building career 
+foundations. Offers strong collaborative, time management and multitasking skills.</p>
+    <img class="queen" src="./guit.jpg" alt="guitar">
     <ul>
       <li>Hometown: LA and China</li>
       <li>Year: Sophomore</li>
       <li>Major: Computer Science</li>
       <li>Hobbies: coding, guitar, swimming, games, anime</li>
       <li>Other Involvements: swim club, game dev club</li>
+    <li>Proficient in Java and Python, React, JavaScript, HTML, CSS. Beginner in C#, C, C++<li>
+    <li>Other: GitHub, VS code, IntelliJ, Unity, Android Studio</li>
+    <li>Languages: English (fluent), Chinese (fluent), French (beginner)</li>
     </ul>
+    <li> Projects: <li>
+    <li>BykeSafe: Developed a modern micro-mobility safety aid to encourage a broader usage of micro-mobility vehicles in areas around Atlanta. IR-cameras and algorithms are used to detect temperature differences between parked cars and environment<li>
+    <li>Bits of Good: Develop bootcamper. Worked on team projects for this non-profit organization on VS code using react. Designed a website for animal adoption for Atlanta animal shelters</li>
+    <li>Paravoid: Horror game developed using Unity.</li>
     <img class="spinny spin-l" src="./OIP.jpg" alt="cool cat"/>
     <img class="spinny spin-r" src="./OIP.jpg" alt="cool cat"/>
     <div class="flex-row justify-around mx-8">
