--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       and media at Georgia Tech. I am Looking for a summer internship as a software engineer. Dedicated to continuous improvement and building career 
 foundations. Offers strong collaborative, time management and multitasking skills.</p>
     <img class="queen" src="./guit.jpg" alt="guitar">
+    <img class="queen" src="./me.png" alt="me">
     <ul>
       <li>Hometown: LA and China</li>
       <li>Year: Sophomore</li>
