--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <p class="p-16"> hello I am Xi Nan I go by Nanxi. I am an undergraduate student currently studying computer science with concentration on Intelligence 
       and media at Georgia Tech. I am Looking for a summer internship as a software engineer. Dedicated to continuous improvement and building career 
 foundations. Offers strong collaborative, time management and multitasking skills.</p>
+    <h2>Research interests: </h2>
+    <p>Machine learning, deep learning, web development, software development.</p>
     <img class="queen" src="./me.png" alt="me">
     <img class="queen" src="./guit.jpg" alt="guitar">
     <ul>
@@ -24,7 +26,7 @@ foundations. Offers strong collaborative, time management and multitasking skill
       <li>Year: Sophomore</li>
       <li>Major: Computer Science</li>
       <li>Hobbies: coding, guitar, swimming, games, anime</li>
-      <li>Other Involvements: swim club, game dev club</li>
+      <li>Other Involvements: swim club, game dev club, Bits of Good</li>
     <li>Proficient in Java and Python, React, JavaScript, HTML, CSS. Beginner in C#, C, C++<li>
     <li>Other: GitHub, VS code, IntelliJ, Unity, Android Studio</li>
     <li>Languages: English (fluent), Chinese (fluent), French (beginner)</li>
@@ -37,7 +39,8 @@ foundations. Offers strong collaborative, time management and multitasking skill
     <img class="spinny spin-r" src="./OIP.jpg" alt="cool cat"/>
     <div class="flex-row justify-around mx-8">
       <div><a href="https://www.instagram.com/nanxi_1126/" target="_blank">Instagram</a></div>
-      <div><a href="https://www.linkedin.com" target="_blank">LinkedIn</a></div>
+      <div><a href="https://www.linkedin.com/in/xi-nan-842766222/" target="_blank">LinkedIn</a></div>
+      <div><a href="https://drive.google.com/file/d/1emc6fVnLNIi8R3Um2Ll0xHcFbcvJbA7u/view?usp=sharing">Resume</a></div>
     </div>
   </div>
 </div>
