--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <div class="flex-col justify-center items-center">
   <div class="card">
-    <img class="spinny spin-r" src="./OIP.jpg" alt="cool cat"/>
-    <img class="spinny spin-l" src="./OIP.jpg" alt="cool cat"/>
+    <img class="spinny spin-r" src="./OIPg.jpg" alt="cool cat"/>
+    <img class="spinny spin-l" src="./OIPg.jpg" alt="cool cat"/>
     <h1>Xi Nan</h1>
     <p class="p-16"> hello I am Xi Nan I go by Nanxi. I am an undergraduate student currently studying computer science with concentration on Intelligence 
       and media at Georgia Tech. I am Looking for a summer internship as a software engineer. Dedicated to continuous improvement and building career 
@@ -35,8 +35,8 @@ foundations. Offers strong collaborative, time management and multitasking skill
     <li>BykeSafe: Developed a modern micro-mobility safety aid to encourage a broader usage of micro-mobility vehicles in areas around Atlanta. IR-cameras and algorithms are used to detect temperature differences between parked cars and environment<li>
     <li>Bits of Good: Develop bootcamper. Worked on team projects for this non-profit organization on VS code using react. Designed a website for animal adoption for Atlanta animal shelters</li>
     <li>Paravoid: Horror game developed using Unity.</li>
-    <img class="spinny spin-l" src="./OIP.jpg" alt="cool cat"/>
-    <img class="spinny spin-r" src="./OIP.jpg" alt="cool cat"/>
+    <img class="spinny spin-l" src="./OIPg.jpg" alt="cool cat"/>
+    <img class="spinny spin-r" src="./OIPg.jpg" alt="cool cat"/>
     <div class="flex-row justify-around mx-8">
       <div><a href="https://www.instagram.com/nanxi_1126/" target="_blank">Instagram</a></div>
       <div><a href="https://www.linkedin.com/in/xi-nan-842766222/" target="_blank">LinkedIn</a></div>
