--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <img class="spinny spin-r" src="./OIPg.jpg" alt="cool cat"/>
     <img class="spinny spin-l" src="./OIPg.jpg" alt="cool cat"/>
     <h1>Xi Nan</h1>
+    <h3>School email: xnan6@gatech.edu  |  Personal email: xinan773@gmail.com</h3>
     <p class="p-16"> Hello I am Xi Nan I go by Nanxi. I am an undergraduate student currently studying computer science with concentration on Intelligence 
       and media at Georgia Tech. I am Looking for a summer internship as a software engineer. Dedicated to continuous improvement and building career 
 foundations. Offers strong collaborative, time management and multitasking skills.</p>
