--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <h1>Xi Nan</h1>
     <h3>School email: xnan6@gatech.edu  |  Personal email: xinan773@gmail.com</h3>
     <p class="p-16"> Hello I am Xi Nan I go by Nanxi. I am an undergraduate student currently studying computer science with concentration on Intelligence 
-      and media at Georgia Tech. I am Looking for a summer internship as a software engineer. Dedicated to continuous improvement and building career 
-foundations. Offers strong collaborative, time management and multitasking skills.</p>
+      and media at Georgia Tech. I am Looking for an internship as a software engineer. I am dedicated to continuous improvement and building career 
+foundations. Offer strong collaborative, time management and multitasking skills.</p>
     <h2>Research interests: </h2>
     <p>Machine learning, deep learning, web development, software development.</p>
     <img class="queen" src="./me.png" alt="me">
